--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,7 +71,8 @@ h1{
     align-items: center;
     justify-content: center;
     position: relative;
-    width: 50px;
+    margin-top: 6px;
+    width: 55px;
     height: 25px;
     background-color: rgb(82, 82, 82);
     border-radius: 20px;
@@ -101,10 +102,6 @@ h1{
   #checkboxInput:checked+.toggleSwitch {
     background-color: rgb(148, 118, 255);
     transition-duration: .2s;
-  }
-  
-  #switchLabel {
-
   }
 
   .form-check{
